[project]
name = "pynativefiledialog"
version = "1.0.0"
description = "Native Windows file dialogs (Vista+) using COM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "vikthedev" }
]

classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
